- Fixed: [#2481] [#2483] rental time reseting at rent interaction