@@ -1,1 +1,10 @@
-- Fixed: [#2481] [#2483] rental time reseting at rent interaction
++ Added: [Suggestion] short-unit format
+    # The short format will use the normal format if the value is lower than 1000.
+    # This format is only used in cases where there is not much space, like on signs.
+    # This will convert balances like the following:
+    # 1000000000 = 1B whereas {value} = 1 and {unit} = B
+    # 1000000 = 1M
+    # 1000 = 1k
+    short-unit: '${value}{unit}'
+
+- Fixed: 3rd party plugins not able to set default state for flag
